fixed connectors z-index

--- a/wp-content/themes/backfeed/assets/styles/common/_global.scss
+++ b/wp-content/themes/backfeed/assets/styles/common/_global.scss
@@ -119,6 +119,7 @@ aside.tagline {
   font-size: 22px;
   color: white;
   text-align: center;
+  z-index: 1;
 
   margin-top: 30px;
   margin-bottom: 30px;
