--- a/wp-content/themes/backfeed/assets/styles/pages/_front-page.scss
+++ b/wp-content/themes/backfeed/assets/styles/pages/_front-page.scss
@@ -1,3 +1,12 @@
+#intro-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 620px;
+  text-align: center;
+}
+
 .use-cases-container {
   display: flex;
   flex-wrap: wrap;
@@ -38,10 +47,11 @@
 .team-members {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .team-member {
+  margin-right: 30px;
   margin-bottom: 20px;
   width: 202px;
   height: 290px;
@@ -149,7 +159,7 @@
 .connector {
   position: absolute;
   display: block;
-  z-index: -1;
+  z-index: 0;
 }
 
 #illustration-triangle {
